--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,21 +1,20 @@
 @font-face {
-  font-family: 'D2Coding Nerd Font';
-  src: url('D2CodingNerdFontComplete-.eot');
-  src: url('D2CodingNerdFontComplete-.eot?#iefix') format('embedded-opentype'),
-    url('D2CodingNerdFontComplete-.woff2') format('woff2'),
-    url('D2CodingNerdFontComplete-.woff') format('woff'),
-    url('D2CodingNerdFontComplete-.svg#D2CodingNerdFontComplete-') format('svg');
-  font-weight: normal;
+  font-family: "JetBrainsMono Nerd Font";
   font-style: normal;
+  font-weight: 200;
+  src: url('https://github.com/geomgle/fonts/D2CodingligatureNerd.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: 'D2Codingligature Nerd Font';
-  src: url('D2CodingligatureNerdFontComplete-.eot');
-  src: url('D2CodingligatureNerdFontComplete-.eot?#iefix') format('embedded-opentype'),
-    url('D2CodingligatureNerdFontComplete-.woff2') format('woff2'),
-    url('D2CodingligatureNerdFontComplete-.woff') format('woff'),
-    url('D2CodingligatureNerdFontComplete-.svg#D2CodingligatureNerdFontComplete-') format('svg');
-  font-weight: normal;
+  font-family: "JetBrainsMono Nerd Font";
   font-style: normal;
+  font-weight: 400;
+  src: url('https://github.com/geomgle/fonts/D2CodingligatureNerd.ttf') format('truetype');
+}
+
+
+@font-face {
+  font-family: "JetBrainsMono Nerd Font";
+  font-weight: 800;
+  src: url('https://github.com/geomgle/fonts/D2CodingligatureNerd-Bold.ttf') format('truetype');
 }
