--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,19 +1,6 @@
 @font-face {
   font-family: "D2CodingLigature Nerd Font";
   font-style: normal;
-  font-weight: 200;
+  font-weight: normal;
   src: url('https://github.com/geomgle/fonts/D2CodingLigatureNerdFont-Regular.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: "D2CodingLigature Nerd Font";
-  font-style: normal;
-  font-weight: 400;
-  src: url('https://github.com/geomgle/fonts/D2CodingLigatureNerdFont-Regular.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: "D2CodingLigature Nerd Font";
-  font-weight: 800;
-  src: url('https://github.com/geomgle/fonts/D2CodingLigatureNerdFont-Bold.ttf') format('truetype');
 }
